--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
-	id 'maven-publish'
+	id 'fabric-loom' version '0.10.27'
+	id 'io.github.juuxel.loom-quiltflower' version '1.4.0'
+	id 'maven-publish'	
 }
 
 sourceCompatibility = JavaVersion.VERSION_16
